FIxed layout misalignment on homepage blog cards.

--- a/Application/SparkServer/Content/Styles/default.css
+++ b/Application/SparkServer/Content/Styles/default.css
@@ -125,20 +125,21 @@ table.fluid { margin-left: auto; margin-right: auto; }
 .explore-tags li { display: inline-block;  margin: 0 1em 0 0; list-style-type: none; }
 .explore-tags a, .explore-tags a:visited { display: block; padding: 0.5em; font-size: 1.25em; text-decoration: none !important; }
 
-ul.blog-list { }
-ul.blog-list li { list-style-type: none; margin-left: 0; }
-ul.blog-list li > .blog-card { margin: 0 0 1em 0; box-shadow: 0 0 24px #CCC; }
-ul.blog-list li > .blog-card h3 { font-size: 1.25em; font-weight: bold; overflow: hidden; margin-bottom: 0.5em !important; }
-ul.blog-list li > .blog-card p { margin: 0; }
-ul.blog-list li > .blog-card > .subtitle { }
-ul.blog-list li > .blog-card > .date { font-size: 0.75em; }
-ul.blog-list li > .blog-card > .blog-list-header { background-position: center; background-size: cover; height: 150px; }
-ul.blog-list li > .blog-card > .blog-list-intro { padding: 1em; background-color: #FFF; }
-ul.blog-list li > .blog-card > .blog-list-intro h3 { font-size: 1.25em; border: none; line-height: 1.25em; overflow: visible; margin-bottom: 0.25em !important; }
-ul.blog-list li > .blog-card > .blog-list-intro .date { font-size: 0.85em; }
+.blog-card { margin: 0 0 1em 0; box-shadow: 0 0 24px #CCC; }
+.blog-card h3 { font-size: 1.25em; font-weight: bold; overflow: hidden; margin-bottom: 0.5em !important; }
+.blog-card p { margin: 0; }
+.blog-card > .subtitle { }
+.blog-card > .date { font-size: 0.75em; }
+.blog-card > .blog-list-header { background-position: center; background-size: cover; height: 150px; }
+.blog-card > .blog-list-intro { padding: 1em; background-color: #FFF; }
+.blog-card > .blog-list-intro h3 { font-size: 1.25em; border: none; line-height: 1.25em; overflow: visible; margin-bottom: 0.25em !important; }
+.blog-card > .blog-list-intro .date { font-size: 0.85em; }
 
+ul.blog-list li { list-style-type: none; margin: 0; }
 ul.blog-list.articles li { margin-bottom: 1em; background-color: rgba(250, 250, 250, 1); padding: 1em; box-shadow: 0 0 12px #c1c1c1; min-height: 125px; }
 ul.video-list li img { max-height: none; box-shadow: 0 0 16px #C1C1C1; }
+
+.card { background-color: #FFF; padding: 1em; box-shadow: 0 0 25px #c1c1c1; }
 
 .btn { display: inline-block; padding: 0.5em 1em; border: none; border-radius: 4px; background-color: #dc291e; color: #FFF; text-shadow: 1px 1px 0 #000; cursor: pointer; font-size: 1.1em; box-shadow: 0 3px 0 #960101; }
 a.btn { color: #FFF; transition: none; }
@@ -262,17 +263,19 @@ footer.page p:last-of-type { margin-bottom: 0; }
 
 	.blog-about { float: right; margin: 0 0 2em 2em; width: 33%; border-left: 1px solid #000; padding: 0 0 0 2em; border-radius: unset; background-color: transparent; }
 
-    ul.blog-list li .blog-card { margin: 0 0 2em 0; }
-    ul.blog-list li > .blog-card > .blog-list-header { height: 300px; }
-    ul.blog-list li > .blog-card > .blog-list-intro { padding: 1.5em 2em 2em 2em; }
-    ul.blog-list li > .blog-card > .blog-list-intro h3 { font-size: 1.75em; }
-    ul.blog-list li > .blog-card.homepage > .blog-list-intro h3 { font-size: 1.5em; }
-    ul.blog-list li > .blog-card > .blog-list-intro .subtitle { margin-bottom: 0.5em; }
+    .blog-card { margin: 0 0 2em 0; }
+    .blog-card > .blog-list-header { height: 300px; }
+    .blog-card > .blog-list-intro { padding: 1.5em; }
+    .blog-card > .blog-list-intro h3 { font-size: 1.75em; }
+    .blog-card.homepage > .blog-list-intro h3 { font-size: 1.5em; }
+    .blog-card > .blog-list-intro .subtitle { margin-bottom: 0.5em; }
 
     ul.blog-list.articles li { margin: 1%; width: 48%; padding: 1em; box-shadow: 0 0 25px #c1c1c1; min-height: 125px; border-radius: 4px; }
     ul.blog-list.articles li:last-of-type { margin: 1%; }
 
     ul.video-list li img { max-width: 320px; }
+
+    .card { padding: 1.5em; }
 
     input[type="text"].half,
     textarea.half,
